# DFO_MAR_Python_DataShop_Toolbox

./: .gitignore  DFO_MAR_Python_DataShop_Toolbox.code-workspace  Process_mtr_files_To_ODF.py  README.md
Help/: Command.txt
Help/Jeff_Help/: test_odf_class.py  update_91001.py  update_CAR2024010.py
Help/Jeff_Help/LOAD_TO_ORACLE/: CTD_2000037_102_1_DN.ODF
Help/Jeff_Help/MTR/: mtr_test_log.txt
Help/Jeff_Help/ODF/: CTD_88N112_006_1_DN.ODF  CTD_91001_001_01_DN.ODF  D146a013.ODF  (+23 more)
Testing/: MetaData_BCD2014999.xlsx
datashop_toolbox/: ODF_File_Specification.md  README.md  pyproject.toml
datashop_toolbox/src/datashop_toolbox/: __init__.py  compare_seabird_xmlcons.py  compasshdr.py  generalhdr.py  meteohdr.py  multinet.py  netcdfhdr.py  odfhdr.py  parameterhdr.py  process_mtr_files.py  qc_thermograph_data.py  recordhdr.py  records.py  select_metadata_file_and_data_folder.py  test_file_handling.py  test_validated_base.py  thermograph.py  validated_base.py
datashop_toolbox/src/datashop_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datashop_toolbox/src/datashop_toolbox/gui/Datashop_Toolbox_GUI/: thermograph_gui.ui  thermograph_gui_loader.py
datashop_toolbox/src/odf_oracle/: __init__.py  cruise_event_to_oracle.py  database_connection_pool.py  event_comments_to_oracle.py  general_cal_comments_to_oracle.py  general_cal_equation_to_oracle.py  general_cal_to_oracle.py  meteo_to_oracle.py  polynomial_cal_to_oracle.py  quality_comments_to_oracle.py  quality_tests_to_oracle.py
datashop_toolbox/tests/: update_BCD2024669.py  update_HUD2014030.py
(+31 files in other folders)
