[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashop-toolbox"
version = "0.9.8"
description = "Python toolbox for oceanographic data processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "icecream>=2.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "oracledb>=3.3.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "termcolor>=3.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"datashop_toolbox" = ["database/parameters.db"]
